feat(package): enhance build and deployment scripts

--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "serverless offline start --stage local",
+    "start:dev": "serverless offline start --stage local",
     "build": "tsc",
     "test": "jest --verbose --detectOpenHandles",
-    "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
-    "deploy:local": "serverless deploy --stage local"
+    "deploy:local": "serverless deploy --stage local",
+    "start:sam": "docker-compose run --rm sam-local sam local start-api --docker-network app-network --host 0.0.0.0",
+    "invoke:local": "serverless invoke local --function",
+    "deploy:sam": "sam deploy --guided"
   },
   "keywords": [],
   "author": "",
@@ -30,12 +34,14 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
+    "class-transformer": "^0.5.1",
     "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "serverless": "^4.4.7",
-    "serverless-offline": "^14.3.3",
-    "serverless-plugin-typescript": "^2.1.5",
+    "serverless": "3.38.0",
+    "serverless-localstack": "1.1.1",
+    "serverless-offline": "13.3.3",
+    "serverless-plugin-typescript": "2.1.5",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
