--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,6 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -22,15 +21,23 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
       
-    - name: Install dependencies
-      run: npm ci
+    - name: Install pnpm
+      run: npm install -g pnpm
 
+    - name: Install dependencies
+      run: pnpm install
+      uses: actions/cache@v3
+      with:
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-
+      
     - name: Run build step (if present)
-      run: npm run build --if-present
+      run: pnpm run build --if-present
 
     - name: Run tests with Jest
-      run: npm test
+      run: pnpm test
       env:
         CI: true
