--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -25,14 +26,16 @@ jobs:
     - name: Install pnpm
       run: npm install -g pnpm
 
-    - name: Install dependencies
-      run: pnpm install
+    - name: Cache pnpm dependencies
       uses: actions/cache@v3
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
         restore-keys: |
           ${{ runner.os }}-pnpm-
+      
+    - name: Install dependencies
+      run: pnpm install
       
     - name: Run build step (if present)
       run: pnpm run build --if-present
